# MarketMeld-An-AI-Stock-Recommendation-System

./: extracted_data.md  investment_strategy.md  pyproject.toml  recommendation_report.md
knowledge/: user_preference.txt
src/synergy/: crew.py  main.py
src/synergy/config/: agents.yaml  tasks.yaml
src/synergy/tools/: mpt.py  newstool.py  stockprice.py
